--- a/portfolio.html
+++ b/portfolio.html
@@ -66,10 +66,12 @@
           <ul class="portfolio list">
             <li class="item">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio1.jpg"
-                  alt="Изображение Веб-сайта на ноутбуке"
-                />
+                <div class="description">
+                  <img
+                    src="./images/portfolio1.jpg"
+                    alt="Изображение Веб-сайта на ноутбуке"
+                  />
+                </div>
                 <h2 class="title">Технокряк</h2>
                 <p class="text">Веб-сайт</p>
               </a>
