--- a/portfolio.html
+++ b/portfolio.html
@@ -71,90 +71,165 @@
                     src="./images/portfolio1.jpg"
                     alt="Изображение Веб-сайта на ноутбуке"
                   />
+                  <div class="des">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Similique veritatis voluptas illum adipisci est officiis
+                    ipsam quod dicta temporibus maxime debitis molestiae iure
+                    laborum in libero placeat, voluptatibus quas eaque?
+                  </div>
                 </div>
+
                 <h2 class="title">Технокряк</h2>
                 <p class="text">Веб-сайт</p>
               </a>
             </li>
             <li class="item">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio2.jpg"
-                  alt="Два баскетболиста борются за мяч"
-                />
+                <div class="description">
+                  <img
+                    src="./images/portfolio2.jpg"
+                    alt="Два баскетболиста борются за мяч"
+                  />
+                  <div class="des">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Eligendi qui dignissimos nesciunt incidunt, debitis, eos
+                    officiis vel assumenda illum harum nihil asperiores sunt.
+                    Beatae expedita esse qui praesentium! Repellendus, sit!
+                  </div>
+                </div>
                 <h2 class="title">Постер New Orlean vs Golden Star</h2>
                 <p class="text">Дизайн</p>
               </a>
             </li>
             <li class="item">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio3.jpg"
-                  alt="Логотип ресторана на фоне рыбы"
-                  width="370"
-                />
+                <div class="description">
+                  <img
+                    src="./images/portfolio3.jpg"
+                    alt="Логотип ресторана на фоне рыбы"
+                    width="370"
+                  />
+                  <div class="des">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Temporibus nulla odit, harum provident delectus nesciunt nam
+                    vitae suscipit maxime est, alias perferendis ex esse
+                    aspernatur omnis aliquid asperiores sed voluptatibus!
+                  </div>
+                </div>
                 <h2 class="title">Ресторан Seafood</h2>
                 <p class="text">Приложение</p>
               </a>
             </li>
             <li class="item">
               <a href="" class="link">
-                <img src="./images/portfolio4.jpg" alt="Наушники" width="370" />
+                <div class="description">
+                  <img
+                    src="./images/portfolio4.jpg"
+                    alt="Наушники"
+                    width="370"
+                  />
+                  <div class="des">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Cum nulla beatae fugit excepturi voluptatem voluptatibus,
+                    consectetur sequi, possimus cumque rem quis dignissimos odio
+                    dolore praesentium quas et illum commodi ipsam?
+                  </div>
+                </div>
                 <h2 class="title">Проект Prime</h2>
                 <p class="text">Маркетинг</p>
               </a>
             </li>
             <li class="item">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio5.jpg"
-                  alt="Белая и коричневая коробки"
-                  width="370"
-                />
+                <div class="description">
+                  <img
+                    src="./images/portfolio5.jpg"
+                    alt="Белая и коричневая коробки"
+                    width="370"
+                  />
+                  <div class="des">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                    Ipsam deserunt saepe facere sunt eum natus debitis rem nam
+                    ratione expedita dolorem commodi mollitia soluta, ab
+                    voluptatum, quidem suscipit. Natus, totam!
+                  </div>
+                </div>
                 <h2 class="title">Проект Boxes</h2>
                 <p class="text">Приложение</p>
               </a>
             </li>
             <li class="item">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio6.jpg"
-                  alt="Изображение Веб-сайта на мониторе"
-                  width="370"
-                />
+                <div class="description">
+                  <img
+                    src="./images/portfolio6.jpg"
+                    alt="Изображение Веб-сайта на мониторе"
+                    width="370"
+                  />
+                  <div class="des">
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Dolore sunt odit asperiores necessitatibus atque accusantium
+                    quod fugit maiores qui. Animi quod deleniti quam sed vel sit
+                    quo eum soluta molestiae?
+                  </div>
+                </div>
                 <h2 class="title">Inspiration has no Borders</h2>
                 <p class="text">Веб-сайт</p>
               </a>
             </li>
             <li class="item">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio7.jpg"
-                  alt="Развернутый журнал"
-                  width="370"
-                />
+                <div class="description">
+                  <img
+                    src="./images/portfolio7.jpg"
+                    alt="Развернутый журнал"
+                    width="370"
+                  />
+                  <div class="des">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Consequuntur sed unde, facilis consequatur, repellat eos
+                    illum quia nobis ut ullam perferendis perspiciatis modi
+                    fugit error quo totam optio nemo omnis!
+                  </div>
+                </div>
                 <h2 class="title">Издание Limited Edition</h2>
                 <p class="text">Дизайн</p>
               </a>
             </li>
             <li class="item">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio8.jpg"
-                  alt="Бирка с логотипом"
-                  width="370"
-                />
+                <div class="description">
+                  <img
+                    src="./images/portfolio8.jpg"
+                    alt="Бирка с логотипом"
+                    width="370"
+                  />
+                  <div class="des">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Porro nemo ipsa expedita quidem adipisci, libero iusto
+                    quisquam nobis pariatur accusantium iste ducimus, mollitia
+                    totam nesciunt doloribus ex facilis unde aliquam.
+                  </div>
+                </div>
                 <h2 class="title">Проект LAB</h2>
                 <p class="text">Маркетинг</p>
               </a>
             </li>
             <li class="item">
               <a href="" class="link">
-                <img
-                  src="./images/portfolio9.jpg"
-                  alt="Человек печатает за ноутбуком"
-                  width="370"
-                />
+                <div class="description">
+                  <img
+                    src="./images/portfolio9.jpg"
+                    alt="Человек печатает за ноутбуком"
+                    width="370"
+                  />
+                  <div class="des">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel
+                    mollitia quis magni cupiditate quae soluta doloribus laborum
+                    at! Vel maiores optio repellat impedit rerum autem
+                    distinctio provident magnam voluptate unde!
+                  </div>
+                </div>
                 <h2 class="title">Growing Business</h2>
                 <p class="text">Приложение</p>
               </a>
