--- a/index.html
+++ b/index.html
@@ -127,25 +127,34 @@
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="tasks list">
             <li class="item">
-              <img
-                src="./images/first.jpg"
-                alt="Разработчик печатает код"
-                width="370"
-              />
+              <div class="border">
+                <img
+                  src="./images/first.jpg"
+                  alt="Разработчик печатает код"
+                  width="370"
+                />
+                <div class="title">Десктопные приложения</div>
+              </div>
             </li>
             <li class="item">
-              <img
-                src="./images/second.jpg"
-                alt="Разработчик работает над мобильным приложением"
-                width="370"
-              />
+              <div class="border">
+                <img
+                  src="./images/second.jpg"
+                  alt="Разработчик работает над мобильным приложением"
+                  width="370"
+                />
+                <div class="title">Мобильные приложения</div>
+              </div>
             </li>
             <li class="item">
-              <img
-                src="./images/third.jpg"
-                alt="Дизайнер работает с палитрой на планшете"
-                width="370"
-              />
+              <div class="border">
+                <img
+                  src="./images/third.jpg"
+                  alt="Дизайнер работает с палитрой на планшете"
+                  width="370"
+                />
+                <div class="title">Дизайнерские решения</div>
+              </div>
             </li>
           </ul>
         </div>
