--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
       <!-- Клиенты -->
       <section class="permanent-clients">
         <div class="container">
-          <h2 class="team-title">Постоянные клиенты</h2>
+          <h2 class="clients-title">Постоянные клиенты</h2>
           <ul class="permanent-clients-flex">
             <li class="permanent-clients-li">
               <a class="permanent-clients-link" href="">
